added basic docker compose, gateway mysql connection fails